--- a/environment.yml
+++ b/environment.yml
@@ -3,117 +3,23 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - aom=3.6.0
-  - blas=1.0
-  - bottleneck=1.4.2
-  - brotli-python=1.0.9
-  - bzip2=1.0.8
-  - c-ares=1.19.1
-  - ca-certificates=2025.2.25
-  - cairo=1.16.0
-  - contourpy=1.3.1
-  - cycler=0.11.0
-  - dav1d=1.2.1
-  - eigen=3.4.0
-  - expat=2.6.4
-  - ffmpeg=6.1.1
-  - fontconfig=2.14.1
-  - fonttools=4.55.3
-  - freetype=2.12.1
-  - fribidi=1.0.10
-  - gdk-pixbuf=2.42.10
-  - gettext=0.21.0
-  - giflib=5.2.2
-  - glib=2.78.4
-  - glib-tools=2.78.4
-  - graphite2=1.3.14
-  - gst-plugins-base=1.14.1
-  - gstreamer=1.14.1
-  - harfbuzz=10.2.0
-  - hdf5=1.14.5
-  - icu=73.1
-  - joblib=1.4.2
-  - jpeg=9e
-  - kiwisolver=1.4.8
-  - krb5=1.20.1
-  - lame=3.100
-  - lcms2=2.16
-  - leptonica=1.82.0
-  - lerc=4.0.0
-  - libabseil=20250127.0
-  - libarchive=3.7.7
-  - libcurl=8.12.1
-  - libcxx=14.0.6
-  - libdeflate=1.22
-  - libedit=3.1.20230828
-  - libev=4.33
-  - libexpat=2.6.4
-  - libffi=3.4.4
-  - libgfortran=5.0.0
-  - libgfortran5=11.3.0
-  - libglib=2.78.4
-  - libiconv=1.16
-  - libnghttp2=1.57.0
-  - libogg=1.3.5
-  - libopenblas=0.3.21
-  - libopus=1.3.1
-  - libpng=1.6.39
-  - libpq=12.20
-  - libprotobuf=5.29.3
-  - librsvg=2.56.3
-  - libsqlite=3.46.0
-  - libssh2=1.11.1
-  - libtheora=1.1.1
-  - libtiff=4.5.1
-  - libvorbis=1.3.7
-  - libvpx=1.13.1
-  - libwebp=1.3.2
-  - libwebp-base=1.3.2
-  - libxml2=2.13.5
+  - python=3.12.2  # Keep Python version fixed
+  # Core data science packages with reasonable bounds
+  - numpy>=2.2.4,<3.0.0
+  - pandas>=2.2.3,<3.0.0
+  - scikit-learn>=1.6.1,<2.0.0
+  - matplotlib>=3.10.0,<4.0.0
+  - statsmodels>=0.14.4,<0.15.0
+  - scipy>=1.15.1,<2.0.0
+  # Important utilities with some flexibility
+  - pip>=25.0
+  - setuptools>=72.1.0
+  - wheel>=0.45.1
+  # Image processing (if needed)
+  - opencv>=4.10.0,<5.0.0
+  - pillow>=11.1.0,<12.0.0
+  # System libraries (keep exact versions for stability)
   - libzlib=1.2.13
-  - llvm-openmp=14.0.6
-  - lz4-c=1.9.4
-  - matplotlib=3.10.0
-  - matplotlib-base=3.10.0
-  - mysql=8.4.0
-  - ncurses=6.4
-  - numexpr=2.10.1
-  - numpy=2.2.4
-  - numpy-base=2.2.4
-  - opencv=4.10.0
-  - openh264=2.1.1
-  - openjpeg=2.5.2
   - openssl=3.4.1
-  - packaging=24.2
-  - pandas=2.2.3
-  - pango=1.50.7
-  - patsy=1.0.1
-  - pcre2=10.42
-  - pillow=11.1.0
-  - pip=25.0
-  - pixman=0.40.0
-  - pyparsing=3.2.0
-  - python=3.12.2
-  - python-dateutil=2.9.0post0
-  - python-tzdata=2023.3
-  - python_abi=3.12
-  - pytz=2024.1
-  - qtbase=6.7.2
-  - readline=8.2
-  - scikit-learn=1.6.1
-  - scipy=1.15.1
-  - setuptools=72.1.0
-  - six=1.16.0
   - sqlite=3.45.3
-  - statsmodels=0.14.4
-  - tesseract=5.2.0
-  - threadpoolctl=3.5.0
-  - tk=8.6.14
-  - tornado=6.4.2
-  - tzdata=2025a
-  - unicodedata2=15.1.0
-  - wheel=0.45.1
-  - xz=5.6.4
-  - zlib=1.2.13
-  - zstd=1.5.6
-prefix: /opt/anaconda3/envs/final-project
+  - ncurses=6.4
