--- a/environment.yml
+++ b/environment.yml
@@ -18,6 +18,7 @@ dependencies:
   # Image processing (if needed)
   - opencv>=4.10.0,<5.0.0
   - pillow>=11.1.0,<12.0.0
+  - scikit-image >= 0.25.2
   # System libraries (keep exact versions for stability)
   - libzlib=1.2.13
   - openssl=3.4.1
