updated annotation analysis
now it calculates fleis kappa for all datasets.
added it to gitignore, before handin, annotation analysis should be removed, as its not in the file hierarchy sample

--- a/.gitignore
+++ b/.gitignore
@@ -175,3 +175,6 @@ cython_debug/
 
 #ignore images in data
 data/
+
+#ignore annotation analysis, as it is not required in the hierarchy
+util/annotation_analysis_util.py
