--- a/environment.yml
+++ b/environment.yml
@@ -1,25 +1,16 @@
-name: final-project
+name: skin_lesion_analysis
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.12.2  # Keep Python version fixed
-  # Core data science packages with reasonable bounds
-  - numpy>=2.2.4,<3.0.0
-  - pandas>=2.2.3,<3.0.0
-  - scikit-learn>=1.6.1,<2.0.0
-  - matplotlib>=3.10.0,<4.0.0
-  - statsmodels>=0.14.4,<0.15.0
-  - scipy>=1.15.1,<2.0.0
-  # Important utilities with some flexibility
-  - pip>=25.0
-  - setuptools>=72.1.0
-  - wheel>=0.45.1
-  # Image processing (if needed)
-  - opencv>=4.10.0,<5.0.0
-  - pillow>=11.1.0,<12.0.0
-  - scikit-image >= 0.25.2
-  # System libraries (keep exact versions for stability)
-  - libzlib=1.2.13
-  - openssl=3.4.1
-  - sqlite=3.45.3
+  - python>=3.7
+  - numpy
+  - scipy
+  - scikit-image
+  - scikit-learn
+  - pandas
+  - opencv
+  - matplotlib
+  - pip
+  - pip:
+    - pathlib
