--- a/environment.yml
+++ b/environment.yml
@@ -8,9 +8,11 @@ dependencies:
   - scipy
   - scikit-image
   - scikit-learn
+  - xgboost
   - pandas
   - opencv
   - matplotlib
+  - seaborn
   - pip
   - pip:
     - pathlib
